--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-.aux
-.bbl
-.log
-.ps
-.pdf
-.sk
-.out
-.gz
-.tex
+*#
+*~
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.gz
+*.log
+*.out
+*.pdf
+*.ps
+*.sk
+*.tex
